# pyalgoim

./: .gitignore  CMakeLists.txt  notes.md  paper.tex  pyalgoim.py  pyproject.toml  setup.py
.github/workflows/: wheels.yml
python/: algoim_batch.hpp  algoim_pybind.cpp
tests/: smoke_batch_quadrature.cpp  test_4d.py  test_pyalgoim.py
